--- a/index.html
+++ b/index.html
@@ -64,6 +64,239 @@
             nos alegra que seas nuestro vecino.
           </p>
         </section>
+
+        <section class="gallery">
+          <img
+            src="./images/gallery-01.jpg"
+            alt="Landscape image"
+            class="gallery__image"
+          />
+          <img
+            src="./images/gallery-02.jpg"
+            alt="Landscape image"
+            class="gallery__image"
+          />
+          <img
+            src="./images/gallery-03.jpg"
+            alt="Landscape image"
+            class="gallery__image"
+          />
+          <img
+            src="./images/gallery-04.jpg"
+            alt="Landscape image"
+            class="gallery__image"
+          />
+          <img
+            src="./images/gallery-05.jpg"
+            alt="Landscape image"
+            class="gallery__image"
+          />
+          <img
+            src="./images/gallery-06.jpg"
+            alt="Landscape image"
+            class="gallery__image"
+          />
+          <img
+            src="./images/gallery-07.jpg"
+            alt="Landscape image"
+            class="gallery__image"
+          />
+          <img
+            src="./images/gallery-08.jpg"
+            alt="Landscape image"
+            class="gallery__image"
+          />
+        </section>
+
+        <section class="places">
+          <div class="place">
+            <h2 class="place__name">Cricieth, Gales</h2>
+
+            <h3 class="place__artist">
+              <span class="place__artist place__artist--heading">ARTISTAS</span>
+              <span class="place__artist place__artist--name"
+                >Steffan Warren, editor jefe</span
+              >
+              <span class="place__artist place__artist--name">
+                Kseniya Glagoleva, gerente de proyectos
+              </span>
+            </h3>
+
+            <img
+              src="./images/cricieth-gales.jpg"
+              alt="Picture of Cricieth city in Gales"
+              class="place__image"
+            />
+
+            <p class="place__description">
+              <span class="place__description-paragraph">
+                Las ruinas medievales del castillo de Cricieth dominan la ciudad
+                desde una roca que extiende sobre el mar. Se cree que fue
+                construido por Llewelyn el Grande en el S. XIII. 800 años
+                después, la autodenominada Perla de Gales en las costas de
+                Snowdonia, se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </span>
+              <span class="place__description-paragraph"
+                >A pocos pasos de camino al castillo, puedes disfrutar de los
+                mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                secreto se rumorea que son algas marinas de la localidad. Otra
+                cosa por la que es famosa Cricieth es por haber ganado el premio
+                *Gales en flor* durante cinco años seguidos por sus
+                espectaculares muestras florales alrededor de la ciudad. También
+                vio nacer a David Lloyd George, el único galés que ha sido
+                Primer Ministro del Reino Unido.
+              </span>
+            </p>
+            <button
+              onclick="window.open('https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq', '_blank')"
+              class="place__buy--button"
+            >
+              Compra esta obra como NFT
+            </button>
+          </div>
+
+          <div class="place">
+            <h2 class="place__name">Berea, EE. UU.</h2>
+
+            <h3 class="place__artist">
+              <span class="place__artist place__artist--heading">ARTISTA</span>
+              <span class="place__artist place__artist--name">
+                Travis Turner, autor y editor
+              </span>
+            </h3>
+
+            <img
+              src="./images/berea-eeuu.jpg"
+              alt="Picture of Berea city in the US"
+              class="place__image"
+            />
+
+            <p class="place__description">
+              <span class="place__description-paragraph">
+                Berea es una pequeña ciudad ubicada en la parte central de
+                Kentucky. La ciudad está rodeada por hermosos bosques y campos.
+                Es conocida como la capital de la artesanía del estado, y sus
+                visitantes hallarán infinitas posibilidades para ir de compras:
+                tiendas de joyas, velas y artículos de madera artesanales;
+                galerías, talleres de vidrio y más. La ciudad celebra un
+                festival anual que rinde tributo al "spoonbread", un platillo
+                local hecho de pan de maíz y que se sirve con una cuchara de
+                madera.
+              </span>
+              <span class="place__description-paragraph">
+                Aunque, probablemente es mejor conocida por su universidad. El
+                Berea College fue fundado en 1855 y fue la primera universidad
+                sureña integrada racialmente, así como la primera en ser
+                coeducacional. Algo que en cierta manera la hace única, es que
+                no cobra colegiatura: cada estudiante recibe una beca del 100%.
+              </span>
+            </p>
+            <button
+              onclick="window.open('https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq', '_blank')"
+              class="place__buy--button"
+            >
+              Compra esta obra como NFT
+            </button>
+          </div>
+
+          <div class="place">
+            <h2 class="place__name">Muramvya, Burundi</h2>
+
+            <h3 class="place__artist">
+              <span class="place__artist place__artist--heading">ARTISTA</span>
+              <span class="place__artist place__artist--name">
+                Grevisse Kenguruka, editor técnico
+              </span>
+            </h3>
+
+            <img
+              src="./images/muramvya-burundi.jpg"
+              alt="Picture of Muramvya city in Burundi"
+              class="place__image"
+            />
+
+            <p class="place__description">
+              <span class="place__description-paragraph">
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </span>
+              <span class="place__description-paragraph">
+                Su clima es más bien frío durante la noche, pero durante el día,
+                podrías pensar que estás en el paraíso. A sus 2,665 metros
+                (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
+                lugares más fríos de la provincia. Pero es justo esa brisa
+                fresca la que da pie a una de las más grandes plantaciones de té
+                y café del país, y que representa la mayoría de las
+                exportaciones de Burundi.
+              </span>
+              <span class="place__description-paragraph">
+                El Parque nacional de Kibira, una de las mayores reservas de
+                vida silvestre para los simios, ocupa parte de cuatro
+                provincias, incluyendo Muramvya. Este parque nacional se
+                encuentra en las cúspides de las hermosas montañas de la
+                Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y 2,660
+                metros. Está lleno de hermosa vegetación, y es una fuente para
+                los diversos ríos y arroyos que proporcionan agua alrededor del
+                país.
+              </span>
+            </p>
+            <button
+              onclick="window.open('https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq', '_blank')"
+              class="place__buy--button"
+            >
+              Compra esta obra como NFT
+            </button>
+          </div>
+
+          <div class="place">
+            <h2 class="place__name">Barranquilla, Colombia</h2>
+
+            <h3 class="place__artist">
+              <span class="place__artist place__artist--heading">ARTISTA</span>
+              <span class="place__artist place__artist--name"
+                >Daniel Fernandez, desarrollador web</span
+              >
+              <span class="place__artist place__artist--name"></span>
+            </h3>
+
+            <img
+              src="./vendor/baq-col.jpg"
+              alt="Picture of Barranquilla city in Colombia"
+              class="place__image"
+            />
+
+            <p class="place__description">
+              <span class="place__description-paragraph">
+                Barranquilla, conocida como la Puerta de Oro de Colombia, es una
+                ciudad vibrante a orillas del río Magdalena y cercana al mar
+                Caribe. Su clima cálido y su gente alegre la convierten en un
+                destino lleno de energía y color. La ciudad mezcla modernidad
+                con tradición, mostrando avenidas concurridas, arquitectura
+                contemporánea y barrios históricos que reflejan su evolución a
+                lo largo del tiempo.
+              </span>
+              <span class="place__description-paragraph">
+                Más allá de su dinamismo económico y cultural, Barranquilla es
+                famosa por su Carnaval, Patrimonio de la Humanidad, donde la
+                música, la danza y la tradición popular llenan de vida sus
+                calles. La gastronomía caribeña, los ritmos contagiosos y la
+                hospitalidad de su gente hacen que cada visita sea una
+                experiencia inolvidable.
+              </span>
+            </p>
+            <button
+              onclick="window.open('https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq', '_blank')"
+              class="place__buy--button"
+            >
+              Compra esta obra como NFT
+            </button>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">© 2025. Daniel Fernandez</p>
