Add code last sections v1

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
             <h2 class="place__name">Cricieth, Gales</h2>
 
             <h3 class="place__artist">
-              <span class="place__artist place__artist--heading">ARTISTAS</span>
-              <span class="place__artist place__artist--name"
+              <span class="place__artist place__artist-heading">ARTISTAS</span>
+              <span class="place__artist place__artist-name"
                 >Steffan Warren, editor jefe</span
               >
-              <span class="place__artist place__artist--name">
+              <span class="place__artist place__artist-name">
                 Kseniya Glagoleva, gerente de proyectos
               </span>
             </h3>
@@ -150,7 +150,7 @@
             </p>
             <button
               onclick="window.open('https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq', '_blank')"
-              class="place__buy--button"
+              class="place__buy-button"
             >
               Compra esta obra como NFT
             </button>
@@ -160,8 +160,8 @@
             <h2 class="place__name">Berea, EE. UU.</h2>
 
             <h3 class="place__artist">
-              <span class="place__artist place__artist--heading">ARTISTA</span>
-              <span class="place__artist place__artist--name">
+              <span class="place__artist place__artist-heading">ARTISTA</span>
+              <span class="place__artist place__artist-name">
                 Travis Turner, autor y editor
               </span>
             </h3>
@@ -194,7 +194,7 @@
             </p>
             <button
               onclick="window.open('https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq', '_blank')"
-              class="place__buy--button"
+              class="place__buy-button"
             >
               Compra esta obra como NFT
             </button>
@@ -204,8 +204,8 @@
             <h2 class="place__name">Muramvya, Burundi</h2>
 
             <h3 class="place__artist">
-              <span class="place__artist place__artist--heading">ARTISTA</span>
-              <span class="place__artist place__artist--name">
+              <span class="place__artist place__artist-heading">ARTISTA</span>
+              <span class="place__artist place__artist-name">
                 Grevisse Kenguruka, editor técnico
               </span>
             </h3>
@@ -247,7 +247,7 @@
             </p>
             <button
               onclick="window.open('https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq', '_blank')"
-              class="place__buy--button"
+              class="place__buy-button"
             >
               Compra esta obra como NFT
             </button>
@@ -257,11 +257,11 @@
             <h2 class="place__name">Barranquilla, Colombia</h2>
 
             <h3 class="place__artist">
-              <span class="place__artist place__artist--heading">ARTISTA</span>
-              <span class="place__artist place__artist--name"
+              <span class="place__artist place__artist-heading">ARTISTA</span>
+              <span class="place__artist place__artist-name"
                 >Daniel Fernandez, desarrollador web</span
               >
-              <span class="place__artist place__artist--name"></span>
+              <span class="place__artist place__artist-name"></span>
             </h3>
 
             <img
@@ -291,7 +291,7 @@
             </p>
             <button
               onclick="window.open('https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq', '_blank')"
-              class="place__buy--button"
+              class="place__buy-button"
             >
               Compra esta obra como NFT
             </button>
